[gd_scene load_steps=22 format=3 uid="uid://dafhek76v0apk"]

[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/SelenaButton.gd" id="1_oe67e"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/Controler.gd" id="1_oeilx"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/IsaacButton.gd" id="2_g8pj3"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/DJButton.gd" id="3_t41gu"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/KorriaButton.gd" id="4_l08yl"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/AdienButton.gd" id="5_h0ml1"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/LyvokButton.gd" id="6_i5eh4"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/StartButton.gd" id="7_rony2"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/How2PlayButton.gd" id="8_yvfcd"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/ControlsButton.gd" id="9_e3n3b"]
[ext_resource type="Script" path="res://ScriptAssets/CharacterSelectScripts/GoButton.gd" id="10_1p4hb"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/AccelField.gd" id="12_fnptb"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/MaxSpeedField.gd" id="13_thpah"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/JumpField.gd" id="14_xyuoe"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/BrakeField.gd" id="15_kpwil"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/GravityMaxField.gd" id="16_v7aeg"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/GravityAccelField.gd" id="17_x1yau"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/JumpHoldFrames.gd" id="19_gprtu"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/JumpBoost.gd" id="19_v32mc"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/SlideBoostField.gd" id="20_1n8bl"]
[ext_resource type="Script" path="res://TestAssets/testScripts/CharacterSelect/SlideBoostBoostField.gd" id="21_32wsr"]

[node name="CharacterSelectScn" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_oeilx")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="Title" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Character Selection"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="SelenaButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Selena"
script = ExtResource("1_oe67e")

[node name="IsaacButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Isaac
"
script = ExtResource("2_g8pj3")

[node name="DJButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "DJ"
script = ExtResource("3_t41gu")

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="KorriaButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Korria"
script = ExtResource("4_l08yl")

[node name="AdienButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Adien"
script = ExtResource("5_h0ml1")

[node name="LyvokButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Lyvok"
script = ExtResource("6_i5eh4")

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="AbilityName" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="AbilityDescription" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer3"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="GoButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Go!"
script = ExtResource("10_1p4hb")

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"
script = ExtResource("9_e3n3b")

[node name="HSeparator2" type="HSeparator" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="How2PlayButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "How To Play"
script = ExtResource("8_yvfcd")

[node name="HSeparator3" type="HSeparator" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
script = ExtResource("7_rony2")

[node name="testControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 3.0
offset_right = 234.0
offset_bottom = 24.0

[node name="AccelLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 4.0
offset_top = 237.0
offset_right = 101.0
offset_bottom = 260.0
text = "Acceleration"

[node name="AccelField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 112.0
offset_top = 234.0
offset_right = 179.063
offset_bottom = 265.0
script = ExtResource("12_fnptb")

[node name="MaxSpeedLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 8.0
offset_top = 280.0
offset_right = 93.0
offset_bottom = 303.0
text = "Max Speed"

[node name="MaxSpeedField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 109.0
offset_top = 273.0
offset_right = 176.063
offset_bottom = 304.0
script = ExtResource("13_thpah")

[node name="JumpLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 9.0
offset_top = 318.0
offset_right = 103.0
offset_bottom = 341.0
text = "Jump Power"

[node name="JumpField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 113.0
offset_top = 318.0
offset_right = 180.063
offset_bottom = 349.0
script = ExtResource("14_xyuoe")

[node name="BrakeLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 10.0
offset_top = 375.0
offset_right = 109.0
offset_bottom = 398.0
text = "Brake Power"

[node name="BrakeField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 119.0
offset_top = 375.0
offset_right = 186.063
offset_bottom = 406.0
script = ExtResource("15_kpwil")

[node name="GravityMaxLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 281.0
offset_top = 234.0
offset_right = 374.0
offset_bottom = 257.0
text = "Gravity Max"

[node name="GravityMaxField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 384.0
offset_top = 232.0
offset_right = 451.063
offset_bottom = 263.0
script = ExtResource("16_v7aeg")

[node name="GravityAccelLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 208.0
offset_top = 270.0
offset_right = 365.0
offset_bottom = 293.0
text = "Gravity Acceleration"

[node name="GravityAccelField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 384.0
offset_top = 271.0
offset_right = 451.063
offset_bottom = 302.0
script = ExtResource("17_x1yau")

[node name="TestInstructions" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 3.0
offset_top = 54.0
offset_right = 455.0
offset_bottom = 234.0
text = "To edit a given stat, click on the input field for that stat
and change the number before hitting the Enter key. You
will know the change was sent successfully when the
carrot moves to the front of the number you typed.
Please only type numbers. If unsure, you can double check
by picking another character or menu and then returning."

[node name="JumpHoldLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 488.0
offset_top = 231.0
offset_right = 683.0
offset_bottom = 254.0
text = "Jump Power Hold Timer"

[node name="JumpFrameField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 686.0
offset_top = 227.0
offset_right = 753.063
offset_bottom = 258.0
script = ExtResource("19_gprtu")

[node name="JumpPowerBoostLabel" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 490.0
offset_top = 263.0
offset_right = 672.0
offset_bottom = 286.0
text = "Jump Power Hold Boost"

[node name="JumpPowerMultField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 687.0
offset_top = 263.0
offset_right = 754.063
offset_bottom = 294.0
script = ExtResource("19_v32mc")

[node name="SlideExtensionTime" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 516.0
offset_top = 318.0
offset_right = 647.0
offset_bottom = 341.0
text = "Slide Jump Timer"

[node name="SlideBoostTimeField" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 658.0
offset_top = 313.0
offset_right = 725.063
offset_bottom = 344.0
script = ExtResource("20_1n8bl")

[node name="SlideJumpBoost" type="Label" parent="testControl"]
layout_mode = 0
offset_left = 509.0
offset_top = 362.0
offset_right = 639.0
offset_bottom = 385.0
text = "Slide Jump Boost"

[node name="SlideBoostMult" type="LineEdit" parent="testControl"]
layout_mode = 0
offset_left = 660.0
offset_top = 359.0
offset_right = 727.063
offset_bottom = 390.0
script = ExtResource("21_32wsr")

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/SelenaButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/SelenaButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/IsaacButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/IsaacButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/DJButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/DJButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer2/KorriaButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer2/KorriaButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer2/AdienButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer2/AdienButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer2/LyvokButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer2/LyvokButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/GoButton" to="Control/VBoxContainer/VBoxContainer/GoButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/ControlsButton" to="Control/VBoxContainer/VBoxContainer/ControlsButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/How2PlayButton" to="Control/VBoxContainer/VBoxContainer/How2PlayButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/StartButton" to="Control/VBoxContainer/VBoxContainer/StartButton" method="_on_pressed"]
[connection signal="text_submitted" from="testControl/AccelField" to="testControl/AccelField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/MaxSpeedField" to="testControl/MaxSpeedField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/JumpField" to="testControl/JumpField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/BrakeField" to="testControl/BrakeField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/GravityMaxField" to="testControl/GravityMaxField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/GravityAccelField" to="testControl/GravityAccelField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/JumpFrameField" to="testControl/JumpFrameField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/JumpPowerMultField" to="testControl/JumpPowerMultField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/SlideBoostTimeField" to="testControl/SlideBoostTimeField" method="_on_text_submitted"]
[connection signal="text_submitted" from="testControl/SlideBoostMult" to="testControl/SlideBoostMult" method="_on_text_submitted"]
